--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -15,6 +15,8 @@ jobs:
         name: Run E2E Tests
         runs-on: ubuntu-latest
         timeout-minutes: 30
+        env:
+            BWS_ACCESS_TOKEN: ${{ secrets.BWS_ACCESS_TOKEN }}
 
         services:
             postgres:
