--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         runs-on: ${{ matrix.platform }}
         env:
             PUPPETEER_SKIP_DOWNLOAD: true
+            BWS_ACCESS_TOKEN: ${{ secrets.BWS_ACCESS_TOKEN }}
         steps:
             - uses: actions/checkout@v4
               with:
