--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,7 @@
         "email": "henryheng@flowiseai.com"
     },
     "dependencies": {
+        "utils": "workspace:*",
         "@auth0/auth0-react": "2.3.0",
         "@auth0/nextjs-auth0": "3.5.0",
         "@codemirror/lang-javascript": "^6.2.4",
