--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -162,12 +162,19 @@ jobs:
             packages: write
             id-token: write
         steps:
+            - name: Generate GitHub App Token
+              id: generate-token
+              uses: tibdex/github-app-token@v1
+              with:
+                  app_id: ${{ secrets.STAGING_RESET_APP_ID }}
+                  private_key: ${{ secrets.STAGING_RESET_APP_PRIVATE_KEY }}
+
             - name: Checkout repository
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
                   submodules: recursive
-                  token: ${{ secrets.GITHUB_TOKEN }}
+                  token: ${{ steps.generate-token.outputs.token }}
 
             - name: Setup Node.js
               uses: actions/setup-node@v4
