--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -53,7 +53,7 @@
         "@langchain/baidu-qianfan": "^0.1.0",
         "@langchain/cohere": "^0.3.4",
         "@langchain/community": "0.3.47",
-        "@langchain/core": "0.3.59",
+        "@langchain/core": "0.3.61",
         "@langchain/deepseek": "0.0.2",
         "@langchain/exa": "^0.1.0",
         "@langchain/google-genai": "0.2.13",
@@ -63,7 +63,7 @@
         "@langchain/mistralai": "^0.2.1",
         "@langchain/mongodb": "^0.1.0",
         "@langchain/ollama": "0.2.3",
-        "@langchain/openai": "0.5.15",
+        "@langchain/openai": "0.6.3",
         "@langchain/pinecone": "^0.2.0",
         "@langchain/qdrant": "^0.1.3",
         "@langchain/weaviate": "^0.2.2",
@@ -163,8 +163,8 @@
         "ws": "8.17.1",
         "youtube-data-mcp-server": "^1.0.16",
         "youtube-transcript": "^1.2.1",
-        "zod": "3.25.67",
-        "zod-to-json-schema": "3.24.5"
+        "zod": "3.25.76",
+        "zod-to-json-schema": "^3.21.4"
     },
     "devDependencies": {
         "@swc/core": "^1.13.5",
