Upgrade project to latest Next and React

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev --turbo",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -19,8 +19,8 @@
         "test:e2e:report": "npx playwright show-report e2e/playwright-report"
     },
     "dependencies": {
-        "@auth0/auth0-react": "2.3.0",
-        "@auth0/nextjs-auth0": "3.5.0",
+        "@auth0/auth0-react": "^2.8.0",
+        "@auth0/nextjs-auth0": "^4.11.0",
         "@aws-sdk/client-s3": "^3.887.0",
         "@aws-sdk/s3-request-presigner": "^3.887.0",
         "@aws-sdk/signature-v4-crt": "^3.887.0",
@@ -29,8 +29,8 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@huggingface/inference": "^2.8.1",
-        "@mui/icons-material": "5.0.3",
-        "@mui/material": "5.15.0",
+        "@mui/icons-material": "^7.3.4",
+        "@mui/material": "^7.3.4",
         "@pinecone-database/pinecone": "4.0.0",
         "@svgr/webpack": "^8.1.0",
         "@textea/json-viewer": "2.14.1",
@@ -52,11 +52,11 @@
         "ioredis": "^5.7.0",
         "jose": "^5.10.0",
         "js-cookie": "^3.0.5",
-        "next": "^14.2.32",
+        "next": "^16.0.1",
         "next-auth": "^4.24.11",
         "openai": "4.96.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "react-easy-crop": "^5.5.3",
         "react-hook-form": "^7.62.0",
         "serpapi": "^1.1.1",
@@ -75,8 +75,8 @@
         "@types/cors": "^2.8.19",
         "@types/js-cookie": "^3.0.6",
         "@types/node": "18.15.11",
-        "@types/react": "18.2.15",
-        "@types/react-dom": "^18.3.7",
+        "@types/react": "^19.0.0",
+        "@types/react-dom": "^19.0.0",
         "@types/uuid": "^9.0.8",
         "copy-webpack-plugin": "^11.0.0",
         "dotenv": "^17.2.2",
