--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
         "pretty-quick": "^3.3.1",
         "rimraf": "^6.0.1",
         "run-script-os": "^1.1.6",
-        "turbo": "1.10.16",
+        "turbo": "^2.5.8",
         "typescript": "~5.5.4",
         "yargs": "^17.7.2"
     },
