--- a/packages-answers/ui/package.json
+++ b/packages-answers/ui/package.json
@@ -15,32 +15,32 @@
         "@types/chrome": "^0.0.232",
         "@types/cors": "^2.8.19",
         "@types/js-cookie": "^3.0.6",
-        "@types/react": "18.2.15",
-        "@types/react-dom": "^18.3.7",
+        "@types/react": "^19.0.0",
+        "@types/react-dom": "^19.0.0",
         "@types/react-syntax-highlighter": "^15.5.13",
         "@types/react-window": "^1.8.8",
         "db": "workspace:*",
         "eslint": "^7.32.0",
         "eslint-config-custom": "workspace:*",
-        "react": "18.2.0",
+        "react": "^19.2.0",
         "tsconfig": "workspace:*",
         "tsup": "^8.5.0",
         "typescript": "~5.5.4"
     },
     "dependencies": {
-        "@auth0/auth0-react": "2.3.0",
-        "@auth0/nextjs-auth0": "3.5.0",
+        "@auth0/auth0-react": "^2.8.0",
+        "@auth0/nextjs-auth0": "^4.11.0",
         "@emotion/cache": "^11.14.0",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@hookform/error-message": "^2.0.1",
         "@monaco-editor/react": "^4.7.0",
-        "@mui/base": "5.0.0-beta.40",
-        "@mui/icons-material": "5.0.3",
-        "@mui/lab": "5.0.0-alpha.156",
-        "@mui/material": "5.15.0",
-        "@mui/system": "^6.5.0",
-        "@mui/x-data-grid": "6.8.0",
+        "@mui/base": "^5.0.0-beta.70",
+        "@mui/icons-material": "^7.3.4",
+        "@mui/lab": "^7.0.1-beta.18",
+        "@mui/material": "^7.3.4",
+        "@mui/system": "^7.3.3",
+        "@mui/x-data-grid": "^7.29.0",
         "@mui/x-tree-view": "^7.29.1",
         "@next-auth/prisma-adapter": "^1.0.7",
         "@textea/json-viewer": "2.14.1",
@@ -57,8 +57,8 @@
         "jszip": "^3.10.1",
         "next": "^14.2.32",
         "next-auth": "^4.24.11",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "react-draggable": "^4.5.0",
         "react-dropzone": "^14.3.8",
         "react-hook-form": "^7.62.0",
