--- a/packages-answers/utils/package.json
+++ b/packages-answers/utils/package.json
@@ -28,7 +28,7 @@
     "license": "ISC",
     "dependencies": {
         "@algolia/client-search": "^4.25.2",
-        "@auth0/nextjs-auth0": "3.5.0",
+        "@auth0/nextjs-auth0": "^4.11.0",
         "@aws-sdk/client-s3": "^3.887.0",
         "@contentful/app-sdk": "^4.43.0",
         "@contentful/rich-text-from-markdown": "^15.18.10",
@@ -68,8 +68,8 @@
         "openapi-typescript": "^6.7.6",
         "pdfjs-dist": "^4.10.38",
         "puppeteer": "^21.11.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "readline": "^1.3.0",
         "sitemapper": "^3.2.24",
         "socket.io-client": "^4.8.1",
@@ -84,7 +84,7 @@
         "@types/jest": "^29.5.14",
         "@types/jsdom": "^21.1.7",
         "@types/node": "18.15.11",
-        "@types/react-dom": "^18.3.7",
+        "@types/react-dom": "^19.0.0",
         "@types/swagger2openapi": "^7.0.4",
         "@types/uuid": "^9.0.8",
         "eslint": "^7.32.0",
