--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,8 +9,8 @@
     },
     "dependencies": {
         "utils": "workspace:*",
-        "@auth0/auth0-react": "2.3.0",
-        "@auth0/nextjs-auth0": "3.5.0",
+        "@auth0/auth0-react": "^2.8.0",
+        "@auth0/nextjs-auth0": "^4.11.0",
         "@codemirror/lang-javascript": "^6.2.4",
         "@codemirror/lang-json": "^6.0.2",
         "@codemirror/view": "^6.38.2",
@@ -19,12 +19,12 @@
         "@emotion/styled": "^11.14.1",
         "@lezer/highlight": "^1.2.1",
         "@microsoft/fetch-event-source": "^2.0.1",
-        "@mui/base": "5.0.0-beta.40",
-        "@mui/icons-material": "5.0.3",
-        "@mui/lab": "5.0.0-alpha.156",
-        "@mui/material": "5.15.0",
-        "@mui/system": "^6.5.0",
-        "@mui/x-data-grid": "6.8.0",
+        "@mui/base": "^5.0.0-beta.70",
+        "@mui/icons-material": "^7.3.4",
+        "@mui/lab": "^7.0.1-beta.18",
+        "@mui/material": "^7.3.4",
+        "@mui/system": "^7.3.3",
+        "@mui/x-data-grid": "^7.29.0",
         "@mui/x-tree-view": "^7.29.1",
         "@tabler/icons-react": "^3.34.1",
         "@tiptap/extension-mention": "^2.26.1",
@@ -50,12 +50,12 @@
         "next": "^14.2.32",
         "notistack": "^2.0.8",
         "prop-types": "^15.8.1",
-        "react": "18.2.0",
+        "react": "^19.2.0",
         "react-code-blocks": "^0.1.6",
         "react-color": "^2.19.3",
         "react-datepicker": "^4.25.0",
         "react-device-detect": "^2.2.3",
-        "react-dom": "18.2.0",
+        "react-dom": "^19.2.0",
         "react-markdown": "^8.0.7",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^8.1.3",
